<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        style="@style/textView_details"
        android:text="@string/name_of_the_place"
        android:layout_marginTop="10dp"/>

    <EditText
        style="@style/editText_details"
        android:id="@+id/name"/>

    <TextView
        style="@style/textView_details"
        android:text="@string/about_the_place"
        android:layout_marginTop="10dp"/>

    <EditText
        style="@style/editText_details"
        android:inputType="textMultiLine"
        android:id="@+id/about"/>

    <Spinner
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:prompt="@string/category"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/category"/>

    <TextView
        style="@style/textView_details"
        android:text="@string/location"
        android:layout_marginTop="10dp"/>

    <fragment
        android:id="@+id/place_autocomplete_fragment"
        android:layout_height="24dp"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="6dp"
        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"/>

    <TextView
        style="@style/textView_details"
        android:text="@string/tags"
        android:layout_marginTop="10dp"/>

    <EditText
        style="@style/editText_details"
        android:id="@+id/tags"/>

    <android.support.v7.widget.CardView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/photo_button"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="16sp"
                android:text="@string/photo" />

            <ImageView
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/imageHolder"
        android:layout_marginTop="10dp"/>
</LinearLayout>